--- a/css/styles.css
+++ b/css/styles.css
@@ -64,3 +64,32 @@ p {
   font-size: 64px;
   color: #F7D716;
 }
+
+@media (max-width: 1028px) {
+
+  .heading {
+    font-size: 5rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+  .heading:hover {
+    text-decoration: none;
+    font-size: 5rem;
+    color: #D61C4E;
+  }
+
+  .dice-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+  .mbl-heading{
+    text-align: left
+  }
+
+}
